<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/AccentColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:background="@color/PrimaryColor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="left|center"
        android:fontFamily="@font/arvobold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:orientation="vertical"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tilNB"
                            android:hint="@string/nama_user"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/black"
                            android:fontFamily="@font/arvobold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/arvobold"
                    android:textSize="18dp"
                    android:text="@string/Barang_Tersedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/backdepan"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:id="@+id/ivbackasus"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:adjustViewBounds="true"
                                android:cropToPadding="true"
                                android:src="@drawable/asus" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btnbackasus"
                            android:text="AV4"
                            android:textColor="@color/black"
                            android:fontFamily="@font/arvobold"
                            android:textSize="20dp"
                            android:backgroundTint="@color/white"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="120dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/backdepan"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:id="@+id/ivbackacer"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:adjustViewBounds="true"
                                android:cropToPadding="true"
                                android:src="@drawable/acer" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btnbackacer"
                            android:text="AA5"
                            android:textColor="@color/black"
                            android:fontFamily="@font/arvobold"
                            android:textSize="20dp"
                            android:backgroundTint="@color/white"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="120dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/backdepan"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:id="@+id/ivbackmacpro"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:adjustViewBounds="true"
                                android:cropToPadding="true"
                                android:src="@drawable/macpro" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btnbackmacpro"
                            android:text="MP3"
                            android:textColor="@color/black"
                            android:fontFamily="@font/arvobold"
                            android:textSize="20dp"
                            android:backgroundTint="@color/white"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="120dp" />
                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"/>
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tilKB"
                            android:hint="@string/Kode_barang"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/black"
                            android:fontFamily="@font/arvobold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tilJB"
                            android:inputType="number"
                            android:hint="@string/Jumlah_barang"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/black"
                            android:fontFamily="@font/arvobold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <RadioGroup
                    android:id="@+id/rbGroup"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbtnGold"
                        android:text="@string/Member1"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:fontFamily="@font/popsb"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"/>
                    <RadioButton
                        android:id="@+id/rbtnSilver"
                        android:text="@string/Member2"
                        android:textSize="18dp"
                        android:fontFamily="@font/popsb"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"/>
                    <RadioButton
                        android:id="@+id/rbtnBiasa"
                        android:text="@string/Member3"
                        android:textSize="18dp"
                        android:fontFamily="@font/popsb"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"/>
                </RadioGroup>

                <Button
                    android:id="@+id/btnProses"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rbGroup"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="#C69774"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/arvobold"
                    android:layout_marginTop="16dp"
                    android:text="@string/Proses"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
